# live-captions-yt

./: .env.example  .gitignore  .prompt.md  Artifacts.md  BACKEND_PROJECT.md  CLAUDE.md  COMPLETION_CHECKLIST.md  CONSIDER.md  DESIGN_TOKENS_QUICK_REFERENCE.md  Dockerfile  Dream.md  HIDDEN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PLAN.md  PORTS.md  README.md  README_PYTHON.md  TODO  TODO.md  TODO_plan.md  docker-compose.monitoring.yml  docker-compose.orchestrator.yml  docker-compose.yml  package-lock.json  package.json  plan.md  plan_backend.md  plan_cea.md  plan_client.md  plan_mcp.md  playwright.config.js  pyproject.toml  test-captions.txt  test-script.txt  tmpplan.md  todo.md  todo_client.md
.claude/: session-start-npm-install.sh  settings.json  settings.local.json
.github/: copilot-instructions.md
.github/agents/: backend-engineer.agent.md  codebase.agent.md  compliance.agent.md  design-systems.agent.md  documentation.agent.md  frontend-engineer.agent.md  orchestrator.agent.md  oss.agent.md  platform-engineer.agent.md  research-synthesizer.agent.md  reviewer.agent.md  secretary-orchestrator.agent.md  secretary.agent.md  security-engineer.agent.md  system-architect.agent.md  tester.agent.md  web-researcher.agent.md
.github/memory/: files-to-check-after-feature.md
.github/prompts/: commit.prompt.md  director.prompt.md  finish-task.md  study.prompt.md
.github/runbooks/: plan-template.md
.github/secretary/: fix-tests-lcyt-web-providers-2026-03-29.md
.github/workflows/: integration-tests.yml
android/: .gitignore
android/lcyt-tv/: CLAUDE.md  settings.gradle.kts
ci/: test-docker.sh
docker/: mediamtx.yml
docker/ffmpeg/: Dockerfile
docker/lcyt-bridge/: Dockerfile
docker/lcyt-bridge-ollama/: README.md  docker-compose.yml
docker/lcyt-dsk-renderer/: Dockerfile  README.md
docker/lcyt-ffmpeg/: Dockerfile  README.md
docs/: DB.md  DEPLOY.md  DESIGN_SYSTEM.md  FEATURES.md  FIREWALL.md  GUIDE.md  INDEX.md  METACODE.md  PLANS.md  PROJECT_STATUS.md  PR_phase6-7_hetzner.md  TEST_COVERAGE.md  TODO_plan.md  compose_orchestrator.md  distributed-compute.md  env-vars.md  ffmpeg-docker-usage.md  hetzner_runbook.md  hetzner_snapshot.md  plan.md  plan_UI.md  plan_backend.md  plan_dock_ffmpeg.md  plan_dock_ffmpeg.md.old  plan_dsk.md  plan_front.md  plan_help.md  plan_mcp.md  plan_mediamtx.md  plan_prod.md  plan_rtmp.md  todo_backend.md  todo_client.md  todo_dock_ffmpeg.md  todo_front.md
docs/api/: README.md  captions.md  contact.md  dsk.md  events.md  files.md  health.md  icons.md  images.md  keys.md  mic.md  preview.md  production.md  radio.md  rtmp-callbacks.md  sessions.md  stats.md  stream-hls.md  stream.md  sync.md  usage.md  video.md  viewer.md  youtube.md
docs/guide/: caption-settings.md  embed.md  general-settings.md  getting-started.md  keyboard-shortcuts.md  overview.md  sending-captions.md  status-actions.md  translation.md
docs/guide-cli/: full-screen.md  interactive.md  single-caption.md
docs/guide-web/: caption-settings.md  embed.md  flow.md  general-settings.md  getting-started.md  minimal-backend.md  overview.md  production-control.md  sending-captions.md  translation.md  video-player.md
docs/lib/: README.md  backend-sender.md  config.md  errors.md  license.md  logger.md  sender.md
docs/mcp/: README.md  http.md  sse.md  stdio.md  tools.md
docs/plans/: PR_phase6-7_hetzner.md  ROADMAP.md  TODO_plan.md  (+77 more)
lcyt/: __init__.py  sender.py
python/: README.md  __init__.py  config.py  sender.py
python-packages/lcyt-backend/: .gitignore  CLAUDE.md  README.md  passenger_wsgi.py  pyproject.toml  requirements.txt  run.py
python-packages/lcyt-backend/lcyt_backend/: __init__.py  _compat.py  _jwt.py  app.py  db.py  store.py
python-packages/lcyt-backend/lcyt_backend/middleware/: admin.py  auth.py  cors.py
python-packages/lcyt-backend/lcyt_backend/routes/: captions.py  keys.py  live.py  sync.py
python-packages/lcyt-backend/tests/: conftest.py  test_captions.py  test_db.py  test_health.py  test_keys.py  test_live.py  test_store.py  test_sync.py
python-packages/lcyt-mcp/: CLAUDE.md  README.md  pyproject.toml  requirements.txt
python-packages/lcyt-mcp/lcyt_mcp/: __init__.py  server.py
python-packages/lcyt-mcp/tests/: test_server.py
scripts/: .env.example  build-cjs.js  build.env.example  curltest  deploy.sh  dev-mock-backend.js  entrypoint.sh  ffmpeg-in-container.sh  fix-agent-skills.mjs  golive  golive-black  golive-local  golive-red-lcyt  golive-red-yt  golive-voice  list_mics  liveblackscreen  migrate-files-to-s3.mjs  nginx-app.conf.sample  nginxbot.sh  prepare_snapshot.sh  test-script.txt
src/: config.js  errors.js  interactive-ui.js  logger.js  sender.js
test/: cli.test.js  errors.test.js  sender.test.js
test-logs/: lcyt-backend-tests.txt
tmp/: test-output.txt
(+108 files in other folders)
