[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lcyt"
version = "1.0.0"
description = "Send live captions to YouTube streams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "jsilvanus" }
]
keywords = ["youtube", "live", "captions", "streaming", "closed-captions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet",
]

[project.urls]
Homepage = "https://github.com/jsilvanus/live-captions-yt"
Repository = "https://github.com/jsilvanus/live-captions-yt"
Issues = "https://github.com/jsilvanus/live-captions-yt/issues"

[tool.hatch.build.targets.wheel]
packages = ["lcyt"]
