[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lcyt-backend"
version = "1.0.0"
description = "Flask backend for YouTube Live caption ingestion (cPanel/Passenger compatible)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "jsilvanus" }
]
keywords = ["youtube", "live", "captions", "streaming", "flask", "backend"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

dependencies = [
    "flask>=3.0",
    "lcyt>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/jsilvanus/live-captions-yt"
Repository = "https://github.com/jsilvanus/live-captions-yt"
Issues = "https://github.com/jsilvanus/live-captions-yt/issues"

[tool.hatch.build.targets.wheel]
packages = ["lcyt_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
